# astral-index

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  WORKFLOW.md  pyproject.toml
.claude/: settings.json
.github/workflows/: eval.yml
scripts/: weekly.sh
src/astral_index/: __init__.py
