[project]
name = "astral-index"
version = "0.1.0"
description = "AI-generated space technology newsletter"
readme = "README.md"
authors = [
    { name = "Aaron Taylor", email = "git@ataylor.io" }
]
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = ["pre-commit>=4.2", "ty>=0.0.19"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
src = ["packages/*/src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = [
    "astral_core",
    "astral_ingest",
    "astral_author",
    "astral_serve",
    "astral_eval",
]

[tool.ty.analysis]
# Optional dependencies not present in the venv
allowed-unresolved-imports = ["playwright", "playwright.**", "pdfplumber"]
