[project]
name = "astral-index"
version = "0.1.0"
description = "AI-generated space technology newsletter"
readme = "README.md"
authors = [
    { name = "Aaron Taylor", email = "git@ataylor.io" }
]
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.2",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ty>=0.0.19",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
src = ["packages/*/src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = [
    "astral_core",
    "astral_ingest",
    "astral_author",
    "astral_serve",
    "astral_eval",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/*/tests"]
# Test directories must NOT have __init__.py to avoid module name collisions

[tool.ty.analysis]
# Optional dependencies not present in the venv
allowed-unresolved-imports = ["playwright", "playwright.**", "pdfplumber", "anthropic", "braintrust", "openai"]
